--- a/.editorconfig
+++ b/.editorconfig
@@ -1,17 +1,12 @@
+# http://editorconfig.org
 root = true
 
 [*]
-end_of_line = lf
-charset = utf-8
-indent_style = tab
+indent_style = space
 indent_size = 2
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
 
 [*.md]
-indent_style = space
-indent_size = 4
-
-[package.json]
-indent_style = space
-
-[*.{yml,yaml}]
-indent_style = space
+trim_trailing_whitespace = false
