--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
-    "hubot-slack": "^3.4.2"
+    "hubot-slack": "^3.4.2",
+    "moment": "^2.11.2"
   },
   "engines": {
     "node": "5.2.x"
