--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.4.2",
-    "moment-timezone": "^0.5.0"
+    "moment-timezone": "^0.5.0",
+    "translink-alerts": "github:ginpei/translink-alerts"
   },
   "engines": {
     "node": "5.2.x"
