--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.4.2",
+    "lodash": "^4.5.0",
     "moment-timezone": "^0.5.0"
   },
   "engines": {
