--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.4.2",
     "moment-timezone": "^0.5.0",
-    "translink-alerts": "github:ginpei/translink-alerts",
+    "translink-alerts": "github:ginpei/translink-alerts#cdf87810217cacbf4b83d6944c8fe425aa2c5568",
     "underscore": "^1.8.3"
   },
   "engines": {
