--- a/bin/env.example
+++ b/bin/env.example
@@ -2,6 +2,9 @@ export TZ=America/Vancouver
 
 export HUBOT_HEROKU_KEEPALIVE_URL=localhost
 
+# get id at: https://api.slack.com/methods/channels.list/test
+export HUBOT_DAILY_CHANNEL=xxxxxxxxx
+
 # https://developer.forecast.io/
 export HUBOT_FORECAST_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 export HUBOT_FORECAST_LAT=49.2604
