--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "logs": "heroku logs -a seena-tan",
     "start": "bin/env && bin/hubot",
-    "test": "bin/env && node_modules/.bin/mocha --compilers coffee:coffee-script/register"
+    "test": "bin/env && mocha --compilers coffee:coffee-script/register"
   },
   "devDependencies": {
     "chai": "^3.5.0",
