--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
   },
   "scripts": {
     "logs": "heroku logs -a seena-tan",
-    "start": "bin/hubot",
-    "test": "mocha --exit --require coffeescript/register test/**/*.test.coffee"
+    "start": "dotenv bin/hubot",
+    "test": "dotenv mocha --exit --require coffeescript/register test/**/*.test.coffee"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "co": "^4.6.0",
     "coffeescript": "^2.3.2",
+    "dotenv-cli": "^1.4.0",
     "hubot-test-helper": "^1.4.4",
     "mocha": "^6.0.1",
     "sinon": "^7.2.4"
